5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1662_2973.log
== TEST (2019-04-15 15:05:36) 
-- CODE:
p=float(input("inicial:"))
v=float(input("veloci:"))
t=float(input("tenpo:"))

s=p+(v*t)


-- ERROR:
File "XXXX", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:07:37) 
-- CODE:
p=float(input("inicial:"))
v=float(input("veloci:"))
t=float(input("tenpo:"))

s=p+(v*t)

if(s<=100.00):
	print("OK")
else:
	print("acima")
-- EXECUTION TIME:
0.229456
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
acima
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
acima
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
acima
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:07:48) 
-- CODE:
p=float(input("inicial:"))
v=float(input("veloci:"))
t=float(input("tenpo:"))

s=p+(v*t)

if(s<=100.00):
	print("OK")
else:
	print("ACIMA")
-- EXECUTION TIME:
0.16483
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:08:07) 
-- CODE:
p=float(input("inicial:"))
v=float(input("veloci:"))
t=float(input("tenpo:"))

s=p+(v*t)

if(s<=100.00):
	print("OK")
else:
	print("ACIMA")
-- OUTPUT:
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:09:22) 
-- CODE:
p=float(input("inicial:"))
v=float(input("veloci:"))
t=float(input("tenpo:"))

s=p+(v*t)

if(s<=100.00):
	print("OK")
	print(s)
else:
	print("ACIMA")
	print(s)
-- EXECUTION TIME:
0.195789
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
ACIMA
7202.0
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
ACIMA
4470.0
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
ACIMA
7203.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:09:25) 
-- CODE:
p=float(input("inicial:"))
v=float(input("veloci:"))
t=float(input("tenpo:"))

s=p+(v*t)

if(s<=100.00):
	print("OK")
	print(s)
else:
	print("ACIMA")
	print(s)
-- OUTPUT:
ACIMA
7202.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:09:52) 
-- CODE:
p=float(input("inicial:"))
v=int(input("veloci:"))
t=float(input("tenpo:"))

s=p+(v*t)

if(s<=100.00):
	print("OK")
	print(s)
else:
	print("ACIMA")
	print(s)
-- EXECUTION TIME:
0.138313
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
ACIMA
7202.0
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
ACIMA
4470.0
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
ACIMA
7203.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:10:05) 
-- CODE:
p=int(input("inicial:"))
v=float(input("veloci:"))
t=float(input("tenpo:"))

s=p+(v*t)

if(s<=100.00):
	print("OK")
	print(s)
else:
	print("ACIMA")
	print(s)
-- EXECUTION TIME:
0.197811
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
ACIMA
7202.0
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
ACIMA
4470.0
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
ACIMA
7203.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:10:21) 
-- CODE:
p=float(input("inicial:"))
v=float(input("veloci:"))
t=int(input("tenpo:"))

s=p+(v*t)

if(s<=100.00):
	print("OK")
	print(s)
else:
	print("ACIMA")
	print(s)
-- EXECUTION TIME:
0.130586
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
ACIMA
7202.0
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
ACIMA
4470.0
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
ACIMA
7203.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:10:49) 
-- CODE:
p=float(input("inicial:"))
v=float(input("veloci:"))
t=int(input("tenpo:"))

s=p+(v*t)

if(s<=100.00):
	print("OK")
	print(s)
else:
	print("ACIMA")
	print(s)
-- EXECUTION TIME:
0.119337
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
ACIMA
7202.0
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
ACIMA
4470.0
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
ACIMA
7203.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:10:50) 
-- CODE:
p=float(input("inicial:"))
v=float(input("veloci:"))
t=int(input("tenpo:"))

s=p+(v*t)

if(s<=100.00):
	print("OK")
	print(s)
else:
	print("ACIMA")
	print(s)
-- OUTPUT:
ACIMA
7202.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:11:41) 
-- CODE:
p=float(input("inicial:"))
v=float(input("veloci:"))
t=int(input("tenpo:"))

s=p+(v*t)

if(s<=100.00):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- EXECUTION TIME:
0.192364
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202.0
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470.0
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203.0
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:11:48) 
-- CODE:
p=float(input("inicial:"))
v=float(input("veloci:"))
t=float(input("tenpo:"))

s=p+(v*t)

if(s<=100.00):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- EXECUTION TIME:
0.16757
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202.0
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470.0
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203.0
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:11:54) 
-- CODE:
p=float(input("inicial:"))
v=int(input("veloci:"))
t=float(input("tenpo:"))

s=p+(v*t)

if(s<=100.00):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- OUTPUT:
7202.0
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:12:57) 
-- CODE:
p=float(input("inicial:"))
v=int(input("veloci:"))
t=float(input("tenpo:"))

s=p+(v*t)

if(s<=100.00):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- EXECUTION TIME:
0.207191
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202.0
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470.0
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203.0
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:13:00) 
-- CODE:
p=float(input("inicial:"))
v=int(input("veloci:"))
t=float(input("tenpo:"))

s=p+(v*t)

if(s<=100.00):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- OUTPUT:
7202.0
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:13:56) 
-- CODE:
p=float(input("inicial:"))
v=float(input("veloci:"))
t=float(input("tenpo:"))

s=p+(v*t)

if(s<=100.00):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- EXECUTION TIME:
0.210138
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202.0
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470.0
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203.0
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:15:07) 
-- CODE:
p=float(input("inicial:"))
v=float(input("veloci:"))
t=float(input("tenpo:"))

s=p+(v*t)

if(s<=100.00):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- OUTPUT:
7202.0
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:16:06) 
-- CODE:
p=int(input("inicial:"))
v=int(input("veloci:"))
t=int(input("tenpo:"))

s=p+(v*t)

if(s<=100.00):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- EXECUTION TIME:
0.180467
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:16:09) 
-- CODE:
p=int(input("inicial:"))
v=int(input("veloci:"))
t=int(input("tenpo:"))

s=p+(v*t)

if(s<=100.00):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:16:21) 
-- CODE:
p=int(input("inicial:"))
v=int(input("veloci:"))
t=int(input("tenpo:"))

s=p+(v*t)

if(s<=100.00):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- EXECUTION TIME:
0.188189
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:16:40) 
-- CODE:
p=int(input("inicial:"))
v=int(input("veloci:"))
t=int(input("tenpo:"))

s=p+(v*t)

if(s<=100.00):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- EXECUTION TIME:
0.141232
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:16:56) 
-- CODE:
p=int(input("inicial:"))
v=int(input("veloci:"))
t=int(input("tenpo:"))

s=p+(v*t)

if(s<100.00):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- EXECUTION TIME:
0.161193
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:16:59) 
-- CODE:
p=int(input("inicial:"))
v=int(input("veloci:"))
t=int(input("tenpo:"))

s=p+(v*t)

if(s<100.00):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:18:12) 
-- CODE:
p=int(input("inicial:"))
v=int(input("veloci:"))
t=int(input("tenpo:"))

s=p+(v*t)

if(s<100.00):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- EXECUTION TIME:
0.212641
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:18:51) 
-- CODE:
p=int(input("inicial:"))
v=int(input("veloci:"))
t=int(input("tenpo:"))

s=p+(v*t)

if(s<100.00):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:19:04) 
-- CODE:
p=int(input("inicial:"))
v=int(input("veloci:"))
t=int(input("tenpo:"))

s=p+(v*t)

if(s<100.00):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:19:57) 
-- CODE:
p=int(input("inicial:"))
v=int(input("veloci:"))
t=int(input("tenpo:"))

s=p+(v*t)

if(s=<100.00):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- EXECUTION TIME:
0.162934
-- ERROR:
  File "/home/codebench/codes/1662/2973/main.py", line 7
    if(s=<100.00):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:20:01) 
-- CODE:
p=int(input("inicial:"))
v=int(input("veloci:"))
t=int(input("tenpo:"))

s=p+(v*t)

if(s=<100.00):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- ERROR:
File "XXXX", line 7
    if(s=<100.00):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:20:10) 
-- CODE:
p=int(input("inicial:"))
v=int(input("veloci:"))
t=int(input("tenpo:"))

s=p+(v*t)

if(s=<100):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- EXECUTION TIME:
0.195634
-- ERROR:
  File "/home/codebench/codes/1662/2973/main.py", line 7
    if(s=<100):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:20:13) 
-- CODE:
p=int(input("inicial:"))
v=int(input("veloci:"))
t=int(input("tenpo:"))

s=p+(v*t)

if(s=<100):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- ERROR:
File "XXXX", line 7
    if(s=<100):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:20:45) 
-- CODE:
p=int(input("inicial:"))
v=int(input("veloci:"))
t=int(input("tenpo:"))

s=p+(v*t)

if(s<=100):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- EXECUTION TIME:
0.23308
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:20:47) 
-- CODE:
p=int(input("inicial:"))
v=int(input("veloci:"))
t=int(input("tenpo:"))

s=p+(v*t)

if(s<=100):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:21:04) 
-- CODE:
p=int(input("inicial:"))
v=int(input("veloci:"))
t=int(input("tenpo:"))

s=p+(v*t)

if(v<=100):
	print(s)
	print("OK")
	
else:
	print(s)
	print("ACIMA")
	
-- EXECUTION TIME:
0.200642
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
